tests/test_results_detailed.txt
============================= test session starts =============================
platform win32 -- Python 3.12.8, pytest-9.0.2, pluggy-1.6.0 -- C:\Python312\python.exe
cachedir: .pytest_cache
rootdir: C:\Source\FedRAMP20xMCP
configfile: pyproject.toml
plugins: anyio-4.12.0, asyncio-1.3.0
asyncio: mode=Mode.AUTO, debug=False, asyncio_default_fixture_loop_scope=None, asyncio_default_test_loop_scope=function
collecting ... collected 234 items / 3 errors

=================================== ERRORS ====================================
_____ ERROR collecting tests/generated_pattern_tests/test_iam_patterns.py _____
C:\Users\kerabun\AppData\Roaming\Python\Python312\site-packages\_pytest\python.py:507: in importtestmodule
    mod = import_path(
C:\Users\kerabun\AppData\Roaming\Python\Python312\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\Python312\Lib\importlib\__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
C:\Users\kerabun\AppData\Roaming\Python\Python312\site-packages\_pytest\assertion\rewrite.py:188: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Users\kerabun\AppData\Roaming\Python\Python312\site-packages\_pytest\assertion\rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Python312\Lib\ast.py:52: in parse
    return compile(source, filename, mode, flags,
E     File "C:\Source\FedRAMP20xMCP\tests\generated_pattern_tests\test_iam_patterns.py", line 335
E       secret = "my-secret-key""""
E                                 ^
E   SyntaxError: unterminated string literal (detected at line 335)
_____ ERROR collecting tests/generated_pattern_tests/test_piy_patterns.py _____
C:\Users\kerabun\AppData\Roaming\Python\Python312\site-packages\_pytest\python.py:507: in importtestmodule
    mod = import_path(
C:\Users\kerabun\AppData\Roaming\Python\Python312\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\Python312\Lib\importlib\__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
C:\Users\kerabun\AppData\Roaming\Python\Python312\site-packages\_pytest\assertion\rewrite.py:188: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Users\kerabun\AppData\Roaming\Python\Python312\site-packages\_pytest\assertion\rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Python312\Lib\ast.py:52: in parse
    return compile(source, filename, mode, flags,
E     File "C:\Source\FedRAMP20xMCP\tests\generated_pattern_tests\test_piy_patterns.py", line 104
E       secret = "my-secret-key""""
E                                 ^
E   SyntaxError: unterminated string literal (detected at line 104)
_____ ERROR collecting tests/generated_pattern_tests/test_svc_patterns.py _____
C:\Users\kerabun\AppData\Roaming\Python\Python312\site-packages\_pytest\python.py:507: in importtestmodule
    mod = import_path(
C:\Users\kerabun\AppData\Roaming\Python\Python312\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\Python312\Lib\importlib\__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
C:\Users\kerabun\AppData\Roaming\Python\Python312\site-packages\_pytest\assertion\rewrite.py:188: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Users\kerabun\AppData\Roaming\Python\Python312\site-packages\_pytest\assertion\rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Python312\Lib\ast.py:52: in parse
    return compile(source, filename, mode, flags,
E     File "C:\Source\FedRAMP20xMCP\tests\generated_pattern_tests\test_svc_patterns.py", line 207
E       secret = "my-secret-key""""
E                                 ^
E   SyntaxError: unterminated string literal (detected at line 207)
============================== warnings summary ===============================
generated_pattern_tests\test_iam_patterns.py:178
  C:\Source\FedRAMP20xMCP\tests\generated_pattern_tests\test_iam_patterns.py:178: SyntaxWarning: invalid escape sequence '\s'
    code = """# Pattern: def\s+\w*login\w*\([^)]*\):

generated_pattern_tests\test_svc_patterns.py:86
  C:\Source\FedRAMP20xMCP\tests\generated_pattern_tests\test_svc_patterns.py:86: SyntaxWarning: invalid escape sequence '\('
    code = """# Pattern: Flask\(|FastAPI\(|class.*Config

-- Docs: https://docs.pytest.org/en/stable/how-to/capture-warnings.html
=========================== short test summary info ===========================
ERROR generated_pattern_tests\test_iam_patterns.py
ERROR generated_pattern_tests\test_piy_patterns.py
ERROR generated_pattern_tests\test_svc_patterns.py
!!!!!!!!!!!!!!!!!!! Interrupted: 3 errors during collection !!!!!!!!!!!!!!!!!!!
======================== 2 warnings, 3 errors in 1.81s ========================
